Week 2 - Intorducing RAG - saving embeddings into the db